--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <div class="nft-container" id="nftContainer"></div>
     </main>
 
-    <!-- Script immer am Ende -->
+    <!-- Solana Web3.js einbinden (sehr wichtig!) -->
+    <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
+
+    <!-- Dein eigenes Script -->
     <script src="script.js"></script>
 
 </body>
