--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drakos Unstaked</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Drakos Unstaked</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 
-    <header>
-        <img id="logo" src="logo.png" alt="Drakos Logo">
-        <h1>Drakos Unstaked</h1>
-        <p class="subtitle">Retrieve your NFTs from the Vault</p>
-    </header>
+  <header>
+    <img src="logo.png" alt="Drakos Logo" id="logo">
+    <h1>Drakos Unstaked</h1>
+  </header>
 
-    <main>
-        <button id="connectWalletBtn">Connect Wallet</button>
+  <main>
+    <button id="connectWalletButton">Connect Wallet</button>
+    <p id="walletAddress"></p>
 
-        <div id="spinner" class="spinner-overlay" style="display:none;">
-            <div class="spinner"></div>
-        </div>
+    <div id="spinner" style="display: none;">Loading NFTs...</div>
 
-        <div class="nft-container" id="nftContainer"></div>
-    </main>
+    <div id="nfts" class="nfts-container"></div>
+  </main>
 
-    <!-- Solana Web3.js einbinden (sehr wichtig!) -->
-    <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
+  <footer>
+    <p>Built with ❤️ using AI - Drakos Unchained Recovery Portal</p>
+  </footer>
 
-    <!-- Dein eigenes Script -->
-    <script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
