--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <title>Drakos Unstaked</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    
-    <!-- Solana Web3.js Library laden -->
+
+    <!-- Solana Web3.js laden -->
     <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
-    
-    <!-- Dein Script laden -->
+
+    <!-- Buffer für Browser bereitstellen -->
+    <script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
+    <script>
+        window.Buffer = buffer.Buffer;
+    </script>
+
+    <!-- Dein eigenes Script -->
     <script src="script.js" defer></script>
 </head>
 <body>
