--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drakos Unstaked</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.png">
-
-    <!-- Solana Web3.js laden -->
-    <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
-
-    <!-- Buffer für Browser bereitstellen -->
-    <script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
-    <script>
-        window.Buffer = buffer.Buffer;
-    </script>
-
-    <!-- Dein eigenes Script -->
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Drakos Unstaked</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <!-- Solana Web3.js -->
+  <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
+  <!-- SPL-Token for Associated Token Accounts -->
+  <script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.5/lib/index.iife.js"></script>
 </head>
 <body>
+  <header>
+    <h1>Drakos Unstaked</h1>
+    <button id="connectWalletButton">Wallet verbinden</button>
+    <p id="walletAddress"></p>
+  </header>
 
-    <header>
-        <h1>Drakos Unstaked</h1>
-        <button id="connectWalletButton">Wallet verbinden</button>
-        <p id="walletAddress"></p>
-    </header>
+  <div id="spinner" style="display:none;"></div>
 
-    <main>
-        <div id="spinner" class="spinner" style="display: none;"></div>
-        <div id="nfts" class="nfts-container"></div>
-    </main>
+  <main>
+    <div id="nfts" class="nfts-container"></div>
+  </main>
 
+  <script src="script.js"></script>
 </body>
 </html>
