--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drakos Unstaked</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="favicon.png">
-  <!-- Solana Web3.js -->
-  <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
-  <!-- SPL-Token for Associated Token Accounts -->
-  <script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.5/lib/index.iife.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Drakos Unstaked</h1>
-    <button id="connectWalletButton">Wallet verbinden</button>
-    <p id="walletAddress"></p>
   </header>
 
-  <div id="spinner" style="display:none;"></div>
-
   <main>
-    <div id="nfts" class="nfts-container"></div>
+    <section class="wallet-section">
+      <button id="connectWalletButton">Wallet verbinden</button>
+      <p id="walletAddress"></p>
+    </section>
+
+    <section id="spinner" class="spinner" style="display: none;"></section>
+
+    <section id="nfts" class="nft-container">
+      <!-- NFTs werden hier geladen -->
+    </section>
   </main>
 
+  <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
