--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drakos Unstaked - Final Version</title>
+  <title>Drakos Unstaked - FINAL</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,8 +20,8 @@
 
 <!-- Solana Web3.js -->
 <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
-<!-- Solana SPL Token (für Token Transfers) -->
-<script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.5/lib/index.iife.js"></script>
+<!-- Richtige SPL Token Version für Browser -->
+<script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.5/dist/index.iife.min.js"></script>
 
 <script>
   console.log("[DEBUG] Vault Unstake Script loaded");
